--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
+    "minio": "^8.0.5",
     "mqtt": "^5.3.5",
     "nest-winston": "^1.9.4",
     "passport": "^0.7.0",
