--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@nestjs-modules/ioredis": "^2.0.2",
+    "@nestjs/bull": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^11.0.1",
@@ -46,13 +47,14 @@
     "@nestjs/websockets": "^10.3.4",
     "@prisma/client": "^5.12.0",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
     "cron": "^3.1.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^13.2.0",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "minio": "^8.0.5",
