--- a/package.json
+++ b/package.json
@@ -133,5 +133,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
